@@ -1,4 +1,4 @@
-$Id: README 49641 2019-01-08 19:24:46Z karl $
+$Id: README 50014 2019-02-12 23:03:56Z kakuto $
 Public domain.  Originally created by Karl Berry, 2005.
 
 Libraries we compile for TeX Live.
@@ -25,7 +25,7 @@ graphite2 1.3.13 - checked 21dec18
   http://sourceforge.net/projects/silgraphite/files/graphite2/
   (requires C++11)
 
-harfbuzz 2.3.0 - checked 22dec18
+harfbuzz 2.3.1 - checked 31jan19
   http://www.freedesktop.org/software/harfbuzz/release/
 
 icu 63.1 - checked 8jan19
@@ -46,10 +46,10 @@ lua 5.3.5 - checked 21jul18
 luajit 2.1.0-beta3 - checked 20jun17
   http://luajit.org/download/LuaJIT-2.1.0-beta3.tar.gz
 
-mpfr 4.0.1 - checked 10feb18
+mpfr 4.0.2 - checked 1jan19
   http://ftp.gnu.org/gnu/mpfr/
 
-pixman 0.36.0 - checked 22nov18
+pixman 0.38.0 - checked 13feb19
   http://cairographics.org/releases/
 
 poppler 0.68.0 - checked 20aug18
