@@ -1,3 +1,8 @@
+2019-02-20  Akira Kakuto  <kakuto@w32tex.org>
+
+	* mktexpk.c: Remove unused definitions.
+	* mktexlsr.c, matextfm.c, mktexupdmain.c: Avoid buffer overflow.
+
 2017-06-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* mktexfmt.c: Use fmtutil-user for consistency with other platforms.
